[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Toru Taniyama <toru.taniyama@dotdata.com>"]
readme = "README.md"
packages = [{include = "dummy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
